Estructura de las páginas realizadas con la etiqueta main

--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -22,41 +22,43 @@
             </ul>
         </nav>
     </header>
-    <section id="s-members">
-        <h2>Miembros</h2>
-        <ul>
-            <li>
-                <figure>
-                    <img src="images/alvaro.jpg" alt="Foto de Álvaro Armas">
-                    <p>Álvaro Armas</p>
-                </figure>
-                <h3>Tareas</h3>
-                <ul>
-                    <li>TO DO</li>
-                </ul>
-            </li>
-            <li>
-                <figure>
-                    <img src="images/alejandro.jpg" alt="Foto de Alejandro López">
-                    <p>Alejandro López</p>
-                </figure>
-                <h3>Tareas</h3>
-                <ul>
-                    <li>TO DO</li>
-                </ul>
-            </li>
-            <li>
-                <figure>
-                    <img src="images/carlos.jpg" alt="Foto de Carlos Medina">
-                    <p>Carlos Medina</p>
-                </figure>
-                <h3>Tareas</h3>
-                <ul>
-                    <li>TO DO</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
+    <main>
+        <section id="s-members">
+            <h2>Miembros</h2>
+            <ul>
+                <li>
+                    <figure>
+                        <img src="images/alvaro.jpg" alt="Foto de Álvaro Armas">
+                        <p>Álvaro Armas</p>
+                    </figure>
+                    <h3>Tareas</h3>
+                    <ul>
+                        <li>TO DO</li>
+                    </ul>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/alejandro.jpg" alt="Foto de Alejandro López">
+                        <p>Alejandro López</p>
+                    </figure>
+                    <h3>Tareas</h3>
+                    <ul>
+                        <li>TO DO</li>
+                    </ul>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/carlos.jpg" alt="Foto de Carlos Medina">
+                        <p>Carlos Medina</p>
+                    </figure>
+                    <h3>Tareas</h3>
+                    <ul>
+                        <li>TO DO</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <p>&copy Nombre del grupo</p>
     </footer>
