Comenzando tutorial en JavaScript

--- a/Marcas/tutorial.html
+++ b/Marcas/tutorial.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section id="s-tutorial">
-            <canvas id="tutorial-canvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
+            <canvas id="tutorial-canvas" width="1280" height="720" style="border:1px solid #000000;"></canvas>
             <section id="s-score">
                 <ul>
                     <li><p>Bank Score: 20</p></li>
@@ -35,11 +35,15 @@
             </section>
             <form>
                 <input type="number" value= 5 id="txt-bet" placeholder="Introduce tu apuesta" />
-                <input type="submit" value="Realizar apuesta" id="btn-realize-bet" onclick="" />
-                <input type="submit" value="Pedir carta" id="btn-demand-card" onclick="" />
-                <input type="submit" value="Plantarse" id="btn-stand" onclick="" />
+                <input class="button" type="submit" value="Realizar apuesta" id="btn-realize-bet" onclick="" />
+                <input class="button" type="submit" value="Pedir carta" id="btn-demand-card" onclick="" />
+                <input class="button" type="submit" value="Plantarse" id="btn-stand" onclick="" />
             </form>
         </section>
     </main>
+    <footer>
+        <p>&copy Nombre del grupo</p>
+    </footer>
+    <script type="text/javascript" src="tutorial.js"></script>
 </body>
 </html>
