Tutorial de prioridades hecho, comenzando tutorial de una ronda

--- a/Marcas/programacion.html
+++ b/Marcas/programacion.html
@@ -30,7 +30,7 @@
             <h2>Lógica de juego de un bot</h2>
         </section>
         <section id="s-player-priority-logic">
-            <h2>stablecimiento de la prioridad inicial de los jugadores</h2>
+            <h2>Establecimiento de la prioridad inicial de los jugadores</h2>
         </section>
         <section id="s-data-bbdd">
             <h2>Inserción en BBDD de los datos del juego</h2>
