Continuando tutorial para una sola jugada

--- a/Marcas/tutorial.html
+++ b/Marcas/tutorial.html
@@ -84,20 +84,17 @@
                             <p>Puntos totales de la Banca: <span class="bank-scores">15</span></p>
                         </li>
                         <li>
-                            <p>Puntos apostados por la banca: <span class="bank-scores">6</span></p>
-                        </li>
-                        <li>
                             <p>Puntuación de la banca: <span class="bank-scores">0</span></p>
                         </li>
                         <li>
                             <p>Puntos totales del jugador: <span class="player-scores">20</span></p>
                         </li>
                         <li>
-                            <p>Puntos apostados por el jugador: <span class="player-scores">0</span></p>
-                        </li>
-                        <li>
                             <p>Puntuación del jugador: <span class="player-scores">0</span></p>
                         </li>
+                        <li>
+                            <p>Puntos apostados: <span class="player-scores">0</span></p>
+                        </li> 
                     </ul>
                 </div>
                 <div id="middle-text">
@@ -116,6 +113,9 @@
                         <div class="card-placeholder"></div>
                         <img id="card-t2" src="images/tutorial01_card03.avif" alt="1 de Bastos" style="visibility: hidden;" />
                     </figure>
+                </div>
+                <div id="msg-div" style="visibility: hidden;">
+                    <p id="msg-text"></p>
                 </div>
             </div>
             <button onclick="PlayTutorialPart1(); return false;">Mostrar tutorial</button>
