Acabado tutorial de simualar una jugada

--- a/Marcas/tutorial.html
+++ b/Marcas/tutorial.html
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <button onclick="PlayTutorialPart1(); return false;">Mostrar tutorial</button>
-            <button onclick="ResetPriorityTutorial(); return false;">Resetear tutorial</button>
+            <button onclick="ResetPlayTutorial(); return false;">Resetear tutorial</button>
         </section>
     </main>
     <footer>
