Realizando el tutorial 1 de manera dinámica

--- a/Marcas/tutorial.html
+++ b/Marcas/tutorial.html
@@ -29,7 +29,7 @@
                 <ul>
                     <li>
                         <figure>
-                            <p>Jugador 1</p>
+                            <p class="player-names">Jordi</p>
                             <p class="card-name-t1" style="visibility: hidden;"></p>
                             <div class="card-placeholder"></div>
                             <img class="card-t1" src="images/tutorial01_card01.avif" alt="12 de espadas" style="visibility: hidden;" />
@@ -37,7 +37,7 @@
                     </li>
                     <li>
                         <figure>
-                            <p>Jugador 2</p>
+                            <p class="player-names">Marina</p>
                             <p class="card-name-t1" style="visibility: hidden;"></p>
                             <div class="card-placeholder"></div>
                             <img class="card-t1" src="images/tutorial01_card02.avif" alt="1 de Copas" style="visibility: hidden;" />
@@ -45,7 +45,7 @@
                     </li>
                     <li>
                         <figure>
-                            <p>Jugador 3</p>
+                            <p class="player-names">Aurora</p>
                             <p class="card-name-t1" style="visibility: hidden;"></p>
                             <div class="card-placeholder"></div>
                             <img class="card-t1" src="images/tutorial01_card03.avif" alt="1 de Bastos" style="visibility: hidden;" />
@@ -53,7 +53,7 @@
                     </li>
                     <li>
                         <figure>
-                            <p>Jugador 4</p>
+                            <p class="player-names">Albert</p>
                             <p class="card-name-t1" style="visibility: hidden;"></p>
                             <div class="card-placeholder"></div>
                             <img class="card-t1" src="images/tutorial01_card04.avif" alt="4 de Oros" style="visibility: hidden;" />
@@ -61,15 +61,6 @@
                     </li>
                 </ul>
                 <div id="tutorial-players-order" style="visibility: hidden;">
-                    <p>
-                        Orden de los jugadores:
-                        <ol>
-                            <li><p>Jugador 3 <span>&#x279C</span> <span class="txt-prioriry">Prioridad 1</span></p></li>
-                            <li><p>Jugador 2 <span>&#x279C</span> <span class="txt-prioriry">Prioridad 2</span></p></li>
-                            <li><p>Jugador 4 <span>&#x279C</span> <span class="txt-prioriry">Prioridad 3</span></p></li>
-                            <li><p>Jugador 1 <strong/>(Banca)</strong> <span>&#x279C</span> <span class="txt-prioriry">Prioridad 4</span></p></li>
-                        </ol>
-                    </p>
                 </div>
             </div>
             <button onclick="PriorityTutorial(); return false;">Mostrar tutorial</button>
