Desmarcando botones de inicar tutorial al empezar, poniendo bien prioridades

--- a/Marcas/tutorial.html
+++ b/Marcas/tutorial.html
@@ -63,7 +63,7 @@
                 <div id="tutorial-players-order" style="visibility: hidden;">
                 </div>
             </div>
-            <button onclick="PriorityTutorial(); return false;">Mostrar tutorial</button>
+            <button id="tutorial1-btn" onclick="PriorityTutorial(); return false;">Mostrar tutorial</button>
             <button onclick="ResetPriorityTutorial(); return false;">Resetear tutorial</button>
         </section>
         <section id="s-tutorial-play">
@@ -109,7 +109,7 @@
                     <p id="msg-text"></p>
                 </div>
             </div>
-            <button onclick="PlayTutorialPart1(); return false;">Mostrar tutorial</button>
+            <button id="tutorial2-btn" onclick="PlayTutorialPart1(); return false;">Mostrar tutorial</button>
             <button onclick="ResetPlayTutorial(); return false;">Resetear tutorial</button>
         </section>
     </main>
