Añadiendo CSS base para todas las páginas

--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="base.css" rel="stylesheet">
     <title>Nombre grupo: Siete y Medio - Equipo</title>
 </head>
 <body>
     <header>
-        <div>
+        <div id="title-div">
             <h1>Siete y Medio</h1>
             <figure>
                 <img src="images/logo.png" alt="Logo Siete y Medio" />
