Comenzando CSS página equipo

--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="base.css" rel="stylesheet">
+    <link href="equip.css" rel="stylesheet">
     <title>Nombre grupo: Siete y Medio - Equipo</title>
 </head>
 <body>
@@ -29,32 +30,36 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="images/alvaro.jpg" alt="Foto de Álvaro Armas">
+                        <img src="images/logo.png" alt="Foto de Álvaro Armas">
                         <p>Álvaro Armas</p>
                     </figure>
                     <h3>Tareas</h3>
                     <ul>
-                        <li>TO DO</li>
+                        <li><p class="small-font">Generación estructura de cartas y jugadores</p></li>
+                        <li><p class="small-font">Programación del gameplay en Python</p></li>
                     </ul>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/alejandro.jpg" alt="Foto de Alejandro López">
+                        <img src="images/logo.png" alt="Foto de Alejandro López">
                         <p>Alejandro López</p>
                     </figure>
                     <h3>Tareas</h3>
                     <ul>
-                        <li>TO DO</li>
+                        <li><p class="small-font">Creación y documentación de la máquina virtual en Azure</p></li>
+                        <li><p class="small-font">Programación del menú principal en Python</p></li>
+                        <li><p class="small-font">Programación de la página web</p></li>
                     </ul>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/carlos.jpg" alt="Foto de Carlos Medina">
+                        <img src="images/logo.png" alt="Foto de Carlos Medina">
                         <p>Carlos Medina</p>
                     </figure>
                     <h3>Tareas</h3>
                     <ul>
-                        <li>TO DO</li>
+                        <li><p class="small-font">Creación e implementación de la base de datos</p></li>
+                        <li><p class="small-font">Programación de la conexión del juego en Python con la base de datos</p></li>
                     </ul>
                 </li>
             </ul>
