--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -53,7 +53,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/logo.png" alt="Foto de Carlos Medina">
+                        <img src="images/CarlosMedina.jpg" alt="Foto de Carlos Medina">
                         <p>Carlos Medina</p>
                     </figure>
                     <h3>Tareas</h3>
