Acabada página de equipo

--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -37,6 +37,7 @@
                     <ul>
                         <li><p class="small-font">Generación estructura de cartas y jugadores</p></li>
                         <li><p class="small-font">Programación del gameplay en Python</p></li>
+                        <li><p class="small-font">Generación de la página Programación</p></li>
                     </ul>
                 </li>
                 <li>
@@ -60,6 +61,7 @@
                     <ul>
                         <li><p class="small-font">Creación e implementación de la base de datos</p></li>
                         <li><p class="small-font">Programación de la conexión del juego en Python con la base de datos</p></li>
+                        <li><p class="small-font">Generación de la página Programación</p></li>
                     </ul>
                 </li>
             </ul>
